disale test module

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <!-- fCC tests -->
-    <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>
+    <!-- <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script> -->
     <!-- JS -->
     <script src='./script.js'></script>
 </body>
