--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>FCC Heat Mapt</title>
+    <title>FCC Heat Map</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <!-- AJAX and d3 -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js'></script>
